--- a/testApp/src/main/AndroidManifest.xml
+++ b/testApp/src/main/AndroidManifest.xml
@@ -8,6 +8,16 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Klean" />
+        android:theme="@style/Theme.Klean">
+
+        <activity android:name=".ChatListActivity">
+
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+
+        </activity>
+    </application>
 
 </manifest>
